@@ -44,15 +44,26 @@ package de.latlon.deejump.plugin.style;
 
 import java.awt.Color;
 import java.awt.image.BufferedImage;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
+import java.io.Reader;
+import java.io.StringReader;
 import java.net.MalformedURLException;
 
 import javax.imageio.ImageIO;
+import javax.media.jai.JAI;
+import javax.media.jai.RenderedOp;
 
+import org.apache.batik.transcoder.TranscoderException;
+import org.apache.batik.transcoder.TranscoderInput;
+import org.apache.batik.transcoder.TranscoderOutput;
+import org.apache.batik.transcoder.image.PNGTranscoder;
 import org.w3c.dom.NamedNodeMap;
 import org.w3c.dom.Node;
 
+import com.sun.media.jai.codec.MemoryCacheSeekableStream;
 import com.vividsolutions.jump.util.Blackboard;
 import com.vividsolutions.jump.workbench.ui.images.IconLoader;
 import com.vividsolutions.jump.workbench.ui.renderer.style.BasicFillPattern;
@@ -80,8 +91,7 @@ public class XSLUtility {
             sb.append("#");
             for (int i = 0; i < components.length - 1; i++) {
 
-                String uglyHack = Integer.toHexString(Integer
-                        .parseInt(components[i]));
+                String uglyHack = Integer.toHexString(Integer.parseInt(components[i]));
                 uglyHack = uglyHack.length() == 1 ? "0" + uglyHack : uglyHack;
                 sb.append(uglyHack);
 
@@ -176,9 +186,55 @@ public class XSLUtility {
         return value;
     }
 
+    /**
+     * @param filename
+     * @param fill
+     * @param stroke
+     * @param size
+     * @return a URL to the image (svg images will be colored and saved as
+     *         image)
+     * @throws IOException
+     */
+    public static String getImageURL(String filename, Node fill, Node stroke, int size) throws IOException {
+        if (filename.toLowerCase().endsWith(".svg")) {
+            File file = File.createTempFile("ojp", "pti.png");
+
+            ByteArrayOutputStream bos = new ByteArrayOutputStream(size * size * 4);
+            TranscoderOutput output = new TranscoderOutput(bos);
+
+            PNGTranscoder trc = new PNGTranscoder();
+            try {
+                Reader in = new StringReader(BitmapVertexStyle.updateSVGColors(new File(filename), toHexColor(stroke),
+                        toHexColor(fill)).toString());
+                TranscoderInput input = new TranscoderInput(in);
+                trc.addTranscodingHint(PNGTranscoder.KEY_HEIGHT, new Float(size));
+                trc.addTranscodingHint(PNGTranscoder.KEY_WIDTH, new Float(size));
+                trc.transcode(input, output);
+                bos.close();
+                ByteArrayInputStream is = new ByteArrayInputStream(bos.toByteArray());
+                MemoryCacheSeekableStream mcss = new MemoryCacheSeekableStream(is);
+                RenderedOp rop = JAI.create("stream", mcss);
+                BufferedImage image = rop.getAsBufferedImage();
+                ImageIO.write(image, "png", file);
+            } catch (TranscoderException e) {
+                // TODO Auto-generated catch block
+                e.printStackTrace();
+            } catch (MalformedURLException e) {
+                // TODO Auto-generated catch block
+                e.printStackTrace();
+            } catch (IOException e) {
+                // TODO Auto-generated catch block
+                e.printStackTrace();
+            }
+
+            return file.toURL().toExternalForm();
+        }
+
+        return fileToURL(filename);
+    }
+
     public static String fileToURL(String filename) {
         File f = new File(filename);
-        f.deleteOnExit();
 
         try {
             return f.toURL().toString();
@@ -205,8 +261,7 @@ public class XSLUtility {
         return IconLoader.class.getResource(icon).toExternalForm();
     }
 
-    public static String createPatternImage(int width, int extent,
-            String pattern, String color) throws IOException {
+    public static String createPatternImage(int width, int extent, String pattern, String color) throws IOException {
         File file = File.createTempFile("ojp", "pti.png");
         WKTFillPattern pat = new WKTFillPattern(width, extent, pattern);
         Blackboard b = pat.getProperties();
